# kaspersky

./: pyproject.toml
data/: cleaned_urls.xlsx  cleaned_urls_human_texts.xlsx  final.parquet
