[project]
name = "kaspersky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "bert-score>=0.3.13",
    "evaluate>=0.4.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=1.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymystem3>=0.2.0",
    "rapidfuzz>=3.13.0",
    "regex>=2024.11.6",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "trafilatura[all]>=2.0.0",
]
